Coordinate switch if too far, fix details views
Switch coord to shibuya station if too far, or failed. Fix details views for alpha stuff, add note on home page, remove prices and not implemented stuff.

--- a/source/public/css/style-dark.css
+++ b/source/public/css/style-dark.css
@@ -241,6 +241,7 @@ td {
   border-style: dashed;
 }
 .purchasePrice {
+  display: none; /* no see until its ready...*/
 	font-style: italic;
 	font-size: 1rem;
 	color: #545454;
@@ -248,6 +249,18 @@ td {
 }
 .purchasePrice::after {
 	content: '\00a5';
+}
+.alphaVersion {
+	font-style: italic;
+	font-size: .8rem;
+	color: #545454;
+	margin-top: .46rem;
+}
+
+.note {
+  font-style: italic;
+	font-size: .9rem;
+	margin-top: .46rem;
 }
 
 /*********************************************/
